welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:8: error: not found: value +
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
              ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
               ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                   ^blueTicket:8: error: aka is already defined as value aka
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                   ^blueTicket:8: error: not found: value +
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                             ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                              ^blueTicket:8: error: aka is already defined as value aka
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                              ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                                    ^blueTicket:8: error: aka is already defined as value aka
      case (10+aka,aka,_)|(10+aka,_,aka)=>5
                                    ^